Update and rename 2024-10-02-flake-it-till-you-make-it.md to 2024-10-02-Event.md

--- a/_posts/2024-10-02-Event.md
+++ b/_posts/2024-10-02-Event.md
@@ -12,3 +12,7 @@ Time: October 17th, 12:00 noon.
 <div style="text-align: justify;">
 Location: CoFo 102, Swansea University Bay Campus.
 </div>
+
+<img src="https://qsimeng.github.io/wimcs-site/assets/img/group.png" alt="Ada Lovelace Day" width="500" height="370">
+
+<img src="https://qsimeng.github.io/wimcs-site/assets/img/cake.png" alt="Ada Lovelace Day Event" width="500" height="390">
